# python-rust-cli

./: README.md  pyo3-uv.md
m1-lab01-lsblk-python/: README.md
m1-lab01-lsblk-python/src/blkpy/: cli.py
m1-lab03-lsblk-rust/: Makefile
m1-lab03-lsblk-rust/src/: lib.rs
m1-lab04-packages-modules/src/: authentication.rs  text.rs
m1-lab05-ls/src/: filesys.rs  main.rs
m1-lab1/: Makefile  requirements.txt  simple.py
m1-lab1/m1-lab2-ssh-dir-tool/: Makefile
m1-lab1/src/blkpy/: cli.py  util.py
m1-lab1/src/test/: test_find.py
m1-lab2-ssh-dir-tool/: pyproject.toml
m1-lab3-lsblk-rust/: Cargo.toml
m1-lab3-lsblk-rust/src/: lib.rs  main.rs
m1-lab4-packages-modules/: Cargo.toml  Makefile
m1-lab4-packages-modules/src/: main.rs
m1-lab5-ls/src/: cli.rs
m2-lab01-lsblk-rust-subcommand/: Makefile
m2-lab01-lsblk-rust-subcommand/src/: device.rs
m2-lab02-lsblk-python-subcommand/: README.md  pyproject.toml
m2-lab02-lsblk-python-subcommand/src/blkpy/: __init__.py
m2-lab02-lsblk-python-subcommand/src/test/: lsblk-J.json
m2-lab03-lsblk-rust-add-options/: Makefile
m2-lab03-lsblk-rust-add-options/src/: main.rs
m2-lab04-timestamp/: Cargo.toml
m2-lab04-timestamp/src/: cli.rs  main.rs
m2-lab05-lsblk-python-env-var/src/blkpy/: cli.py
m2-lab06-json-formatter-python/: Makefile  pyproject.toml
m2-lab07-lsblk-rust-logging/: Makefile  README.md
m2-lab07-lsblk-rust-logging/src/: device.rs
m2-lab08-lsblk-rust-log-to-file/: Cargo.toml
m2-lab09-lsblk-rust-error-handling/: Makefile  README.md
m2-lab09-lsblk-rust-error-handling/src/: arguments.rs  device.rs  main.rs
m2-lab09-lsblk-rust-error-handling/support/: lsblk
m2-lab1-lsblk-rust-subcommand/: Cargo.toml
m2-lab1-lsblk-rust-subcommand/src/: arguments.rs  main.rs
m2-lab10-lsblk-python-error-handling/: Makefile
m2-lab10-lsblk-python-error-handling/src/blkpy/: cli.py  logger.py
m2-lab10-lsblk-python-error-handling/src/test/: test_run_lsblk.py
m2-lab10-lsblk-python-error-handling/support/: remove_from_path.ipynb
m2-lab11-pyo3/: Cargo.toml  Makefile  README.md  pyproject.toml
m2-lab11-pyo3/src/: fact.py  lib.rs
m2-lab12-pyo3-uv/numlib/: Cargo.toml  Makefile  pyproject.toml
m2-lab12-pyo3-uv/numlib/src/: lib.rs
m2-lab2-lsblk-python-subcommand/: Makefile
m2-lab3-lsblk-rust-add-options/: Cargo.toml
m2-lab3-lsblk-rust-add-options/src/: arguments.rs
m2-lab4-timestamp/: Cargo.toml  Makefile
m2-lab4-timestamp/src/: cli.rs  main.rs  time_tool.rs
m2-lab5-lsblk-python-env-var/: Makefile
m2-lab6-json-formatter-python/samples/: launch.json
m2-lab7-lsblk-rust-logging/src/: arguments.rs  main.rs
m2-lab8-lsblk-rust-log-to-file/src/: main.rs
m3-lab01-pyo3-exception/: Cargo.toml  Makefile  pyproject.toml
m3-lab01-pyo3-exception/python/cowkulator/: __init__.py
m3-lab01-pyo3-exception/python/tests/: test_all.py  test_divide.py
m3-lab01-pyo3-exception/src/: lib.rs
m3-lab02-pyo3-call-python-from-rust/: Cargo.toml  Makefile
m3-lab02-pyo3-call-python-from-rust/src/: main.rs
m3-lab03-criterion/: Cargo.toml
m3-lab03-pyo3-embedded-python/: Cargo.toml
m3-lab03-pyo3-embedded-python/src/: main.rs
m3-lab04-criterion/benches/: my_benchmark.rs
m3-lab05-polars-cli/: Cargo.toml  Makefile
m3-lab05-polars-cli/benches/: my_benchmark.rs
m3-lab05-polars-cli/src/: lib.rs  main.rs
m3-lab05-polars-cli/tests/: integration_tests.rs
m3-lab06-aws-lambda/: Cargo.toml  Makefile  README.md  invoke.sh
m3-lab06-aws-lambda/bruno/: Example1.bru  bruno.json
m3-lab06-aws-lambda/src/: generic_handler.rs
m3-lab1-pyo3-exception/: pyproject.toml
m3-lab1-pyo3-exception/src/deevai/: __init__.py
(+3 files in other folders)
