[project]
name = "ssh-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
st = "ssh_tool.cli:main"
ssh-tool = "ssh_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
